--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && SET PORT=4000 && react-app-rewired start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider PORT=4000 react-app-rewired start",
     "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-app-rewired build",
     "test": "react-app-rewired --env=jsdom",
     "less": "lessc --js src/styles/wieldy.less public/css/style.css"
